attached_assets/Pasted-No-changes-detected-Operations-to-perform-Apply-all-migrations-accounts-admin-auth-clients-c-1755285624822_1755285624822.txt
No changes detected
Operations to perform:
  Apply all migrations: accounts, admin, auth, clients, contenttypes, property, reservation, sessions
Running migrations:
  No migrations to apply.
Watching for file changes with StatReloader
INFO 2025-08-15 19:18:24,990 autoreload 8054 140109964209344 Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
August 15, 2025 - 19:18:25
Django version 4.2.11, using settings 'config.settings'
Starting development server at http://0.0.0.0:5000/
Quit the server with CONTROL-C.

Not Found: /
WARNING 2025-08-15 19:18:26,411 log 8054 140109797299904 Not Found: /
[15/Aug/2025 19:18:26] "GET / HTTP/1.1" 404 3444
Not Found: /
WARNING 2025-08-15 19:18:26,576 log 8054 140109797299904 Not Found: /
[15/Aug/2025 19:18:26] "GET / HTTP/1.1" 404 3444
Bad Request: /api/v1/properties/calculate-pricing/
WARNING 2025-08-15 19:18:45,110 log 8054 140109797299904 Bad Request: /api/v1/properties/calculate-pricing/
[15/Aug/2025 19:18:45] "GET /api/v1/properties/calculate-pricing/?check_in_date=2025-12-25&check_out_date=2025-12-27&guests=2&property_id=1%22 HTTP/1.1" 400 6103
Internal Server Error: /api/v1/properties/calculate-pricing/
ERROR 2025-08-15 19:18:55,994 log 8054 140109797299904 Internal Server Error: /api/v1/properties/calculate-pricing/
[15/Aug/2025 19:18:55] "GET /api/v1/properties/calculate-pricing/?check_in_date=2025-12-25&check_out_date=2025-12-27&guests=2 HTTP/1.1" 500 6111
/home/runner/workspace/src/apps/property/pricing_service.py changed, reloading.
INFO 2025-08-15 19:20:04,674 autoreload 8054 140109964209344 /home/runner/workspace/src/apps/property/pricing_service.py changed, reloading.
Watching for file changes with StatReloader
INFO 2025-08-15 19:20:05,400 autoreload 8273 140193216519360 Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/nix/store/h097imm3w6dpx10qynrd2sz9fks2wbq8-python3-3.12.11/lib/python3.12/threading.py", line 1075, in _bootstrap_inner
    self.run()
  File "/nix/store/h097imm3w6dpx10qynrd2sz9fks2wbq8-python3-3.12.11/lib/python3.12/threading.py", line 1012, in run
    self._target(*self._args, **self._kwargs)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/core/management/commands/runserver.py", line 125, in inner_run
    autoreload.raise_last_exception()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/utils/autoreload.py", line 87, in raise_last_exception
    raise _exception[1]
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/core/management/__init__.py", line 394, in execute
    autoreload.check_errors(django.setup)()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/apps/registry.py", line 124, in populate
    app_config.ready()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/contrib/admin/apps.py", line 27, in ready
    self.module.autodiscover()
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/contrib/admin/__init__.py", line 50, in autodiscover
    autodiscover_modules("admin", register_to=site)
  File "/home/runner/workspace/.pythonlibs/lib/python3.12/site-packages/django/utils/module_loading.py", line 58, in autodiscover_modules
    import_module("%s.%s" % (app_config.name, module_to_search))
  File "/nix/store/h097imm3w6dpx10qynrd2sz9fks2wbq8-python3-3.12.11/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 999, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/runner/workspace/src/apps/property/admin.py", line 4, in <module>
    from .pricing_models import (
  File "/home/runner/workspace/src/apps/property/pricing_models.py", line 98
    return self.weekday_low_season_usdte(self, date):
                                                    ^
SyntaxError: invalid syntax